Remove top-level ensime server version setting